<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/rootLayoutShows"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar_progress" />

            <com.battlelancer.seriesguide.widgets.SlidingTabLayout
                android:id="@+id/tabLayoutTabs"
                style="@style/Widget.SeriesGuide.TabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPagerTabs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/buttonShowsAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/action_shows_add"
            android:src="@drawable/ic_action_add" />

    </FrameLayout>

    <include layout="@layout/drawer_left" />

</android.support.v4.widget.DrawerLayout>