<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/containerAddContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridView
            android:id="@+android:id/list"
            style="@style/Widget.SeriesGuide.Grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="@dimen/showgrid_columnWidth"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            tools:listitem="@layout/item_addshow" />

        <com.battlelancer.seriesguide.widgets.EmptyView
            android:id="@+id/emptyViewAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:emptyViewButtonText="@string/action_try_again"
            app:emptyViewMessage="@string/add_empty" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBarAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/protection_dark"
        android:padding="@dimen/default_padding"
        android:text="@string/powered_by_ttt"
        android:textAppearance="@style/TextAppearance.Caption.Narrow"
        android:textColor="@color/black_11" />

</RelativeLayout>