<?xml version="1.0" encoding="utf-8"?>

<!-- Will never be a root layout, overdraw is expected -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_episode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/buttons_min_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEpisodeWatched"
            style="@style/Widget.SeriesGuide.Button.Borderless.Caption.Platform"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/action_watched"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/action_watched"
            tools:drawableTint="?attr/sgColorIcon"
            tools:drawableTop="@drawable/ic_watch_black_24dp" />

        <Button
            android:id="@+id/buttonEpisodeCollected"
            style="@style/Widget.SeriesGuide.Button.Borderless.Caption.Platform"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/action_collection_add"
            tools:drawableTint="?attr/sgColorIcon"
            tools:drawableTop="@drawable/ic_collect_black_24dp" />

        <Button
            android:id="@+id/buttonEpisodeSkip"
            style="@style/Widget.SeriesGuide.Button.Borderless.Caption.Platform"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/action_skip"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/action_skip"
            tools:drawableTint="?attr/sgColorIcon"
            tools:drawableTop="@drawable/ic_skip_black_24dp" />

    </LinearLayout>

    <View
        android:id="@+id/dividerEpisodeButtons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginRight="@dimen/large_padding"
        android:background="?attr/sgColorDivider" />

    <Button
        android:id="@+id/buttonEpisodeCheckin"
        style="@style/Widget.SeriesGuide.Button.Borderless.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_button"
        android:layout_marginRight="@dimen/padding_button"
        android:contentDescription="@string/checkin"
        android:drawableLeft="?attr/drawableCheckin"
        android:drawablePadding="8dp"
        android:gravity="center_vertical|start"
        android:text="@string/checkin" />

</LinearLayout>