...
    <string name="collect_all">Collected all</string>
    <string name="uncollect_all">Collected none</string>
    <string name="action_skip">Skip</string>
    <string name="action_dont_skip">Don\'t skip</string>
    <string name="action_collection_add">Add to collection</string>
    <string name="action_collection_remove">Remove from collection</string>
    <string name="action_watched">Set watched</string>
    <string name="action_unwatched">Set not watched</string>
    <string name="state_watched">Watched</string>
    <string name="state_watched_multiple_format">Watched (%d)</string>
    <string name="state_skipped">Skipped</string>
    <string name="state_in_collection">In collection</string>
    <string name="state_on_watchlist">On watchlist</string>
...
    <string name="action_episode_notifications_on">Turn on episode notifications</string>
    <string name="action_episode_notifications_off">Turn off episode notifications</string>
    <string name="context_hide">Hide</string>
    <string name="context_unhide">Do not hide</string>
    <string name="hidden">Moved to hidden</string>
    <string name="unhidden">Show is visible again</string>
    <string name="action_shows_add">Add show</string>
    <string name="action_filter_and_sort">Filter and sort</string>
    <string name="title_filter_general">General</string>
    <string name="empty_filter">Reset filters</string>
    <string name="action_shows_filter_favorites">Favorites</string>
    <string name="action_shows_filter_unwatched">Unwatched</string>
    <string name="action_shows_filter_upcoming">Upcoming</string>
...
