...
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/large_padding"
                    android:layout_marginRight="@dimen/large_padding"
                    android:layout_toRightOf="@id/imageViewAddPoster"
                    android:paddingTop="@dimen/default_padding"
                    android:textAppearance="@style/TextAppearance.SeriesGuide.Headline6"
                    tools:text="@string/action_shows_add" />

                <TextView
                    android:id="@+id/textViewAddReleased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewAddTitle"
...
            style="?attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Button Negative With Long Text" />

        <Button
            android:id="@+id/buttonDialogAddShowPrimary"
            style="?attr/sgButtonDialogPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Button Positive" />

    </androidx.constraintlayout.widget.ConstraintLayout>
...
