<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayoutShowsDiscover"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutShowsDiscover"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Add enough bottom padding so last item is above floating action button. -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewShowsDiscover"
            style="@style/Widget.SeriesGuide.RecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/grid_item_margin_horizontal"
            android:paddingTop="8dp"
            android:paddingRight="@dimen/grid_item_margin_horizontal"
            android:paddingBottom="88dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_addshow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>